--- a/temples.html
+++ b/temples.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aristid Wilbrech ELENGA-ASSEKA WDD131-Temples Album</title>
-    <meta descriptiom="WDD131-Temples Album home page to represent temples of the church of jesus christ for the latter days saints around the world.">
-    <meta author="Aristid Wilbrech ELENGA-ASSEKA">
+    <meta name="description" content="WDD131-Temples Album home page to represent temples of the church of jesus christ for the latter days saints around the world.">
+    <meta name="author" content="Aristid Wilbrech ELENGA-ASSEKA">
 </head>
 <body>
     <header>
