--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Aristid Wilbrech ELENGA-ASSEKA">
     <meta name="description" content="WDD131 Dynamic Web Fondalmental allows me to demonstrate my prerequisite knowledge by applying HTML and CSS in the design and development of a home page.">
     <link rel="stylesheet" href="styles/index.css">
-    <script src="scripts/index.js" async></script>
+    <script src="scripts/indexs.js" defer></script>
 </head>
 <body background="images/aba-nigeria-temple-lds-248708-high-res-print.jpg" loading="lazy">
     <header>
