--- a/temples.html
+++ b/temples.html
@@ -6,6 +6,8 @@
     <title>Aristid Wilbrech ELENGA-ASSEKA WDD131-Temples Album</title>
     <meta name="description" content="WDD131-Temples Album home page to represent temples of the church of jesus christ for the latter days saints around the world.">
     <meta name="author" content="Aristid Wilbrech ELENGA-ASSEKA">
+    <link rel="stylesheet" href="styles/temples.css">
+    <script src="scripts/temples.js" defer></script>
 </head>
 <body>
     <header>
@@ -17,48 +19,63 @@
                 <li><a href="old">Old</a></li>
                 <li><a href="new">New</a></li>
                 <li><a href="large">Large</a></li>
-                <li><a href="small"></a>Small</li>
+                <li><a href="small">Small</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <figure>
-            <img src="images/aba-nigeria-temple-lds-248708-high-res-print.jpg" alt="temple-img" width="25%" height="25%">
+            <img src="images/aba-nigeria-temple-lds-248708-high-res-print.jpg" alt="temple-img" width="400px" height="400px">
             <figcaption>aba-nigeria-temple</figcaption>
-        </figure>
-        <figure>
-            <img src="images/albuquerque_temple_lds (2).jpeg" alt="temple-img" width="25%" height="25%">
-            <figcaption>albuquerque_temple(2)</figcaption>
         </figure>
 
         <figure>
-            <img src="images/albuquerque_temple_lds-a.jpeg" alt="temple-img" width="25%" height="25%">
+            <img src="images/rendering_abidjan_ivory_coast_temple.jpeg" alt="temple-img" width="400px" height="400px">
+            <figcaption>rendering_abidjan_temple</figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/albuquerque_temple_lds-a.jpeg" alt="temple-img" width="400px" height="400px">
             <figcaption>albuquerque_temple_lds-a</figcaption>
         </figure>
 
         <figure>
-            <img src="images/albuquerque_temple_lds.jpeg" alt="temple-img" width="25%" height="25%">
+            <img src="images/albuquerque_temple_lds.jpeg" alt="temple-img" width="400px" height="400px">
             <figcaption>albuquerque_temple</figcaption>
         </figure>
 
         <figure>
-            <img src="images/bangkok_thailand_temple_exteriors.jpeg" alt="temple-img" width="25%" height="25%">
-            <figcaption>bangkok_thailand_temple_exteriors</figcaption>
+            <img src="images/bangkok_thailand_temple_exteriors.jpeg" alt="temple-img" width="400px" height="400px">
+            <figcaption>bangkok_thailand_temple</figcaption>
         </figure>
 
         <figure>
-            <img src="images/bern_switzerland_temple_lds.jpeg" alt="temple-img" width="25%" height="25%">
+            <img src="images/bern_switzerland_temple_lds.jpeg" alt="temple-img" width="400px" height="400px">
             <figcaption>bern_switzerland_temple</figcaption>
         </figure>
 
         <figure>
-            <img src="images/billings_temple_lds.jpeg" alt="temple-img" width="25%" height="25%">
+            <img src="images/billings_temple_lds.jpeg" alt="temple-img" width="400px" height="400px">
             <figcaption>billings_temple</figcaption>
         </figure>
 
         <figure>
+            <img src="images/brisbane_australia_temple_lds.jpeg" width="400px" height="400px" alt="temple-img">
+            <figcaption>brisbane_australia_temple</figcaption>
+        </figure>
 
+        <figure>
+            <img src="images/calgary_alberta_temple_before_open_house.jpeg" width="400px" height="400px" alt="temple-img">
+            <figcaption>calgary_alberta_temple</figcaption>
+        </figure> 
+
+    </main>
+
+    <footer>
+        <p><span id="year"></span>&#9830;aristid wilbrech ELENGA-ASSEKA&#9830;congo brazzaville.</p>
+        <p id="lastModified"></p>
     </footer>
+    
 </body>
 </html>
