--- a/temples.html
+++ b/temples.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>WDD131-Temples Album</h1>
+        <h1 class="title">Temples Album</h1>
 
         <nav class="home-page">
             <ul>
@@ -23,7 +23,7 @@
             </ul>
         </nav>
     </header>
-
+    <h1 class="home">Home</h1>
     <main>
         <figure>
             <img src="images/aba-nigeria-temple-lds-248708-high-res-print.jpg" alt="temple-img" width="400px" height="400px">
