--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section class="section-2">
             <h2>Web Dev Resources</h2>
             <ul class="links">
-                <li class="link"><a href="w3school">w3school</a></li>
+                <li class="link"><a href="temples.html">Temples</a></li>
                 <li class="link"><a href="byu-pathway">byu-pathway</a></li>
                 <li class="link"><a href="byu-idaho">byu-idaho</a></li>
             </ul>
