--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h2>Web Dev Resources</h2>
             <ul class="links">
                 <li class="link"><a href="temples.html">Temples</a></li>
-                <li class="link"><a href="place.html">place</a></li>
+                <li class="link"><a href="week03/place.html">place</a></li>
                 <li class="link"><a href="byu-idaho">byu-idaho</a></li>
             </ul>
         </section>
