--- a/temples.html
+++ b/temples.html
@@ -32,47 +32,47 @@
     <h2 class="home">Home</h2>
     <main>
         <figure>
-            <img src="images/aba-nigeria-temple-lds-248708-high-res-print.jpg" alt="temple-img" width="400px" height="400px">
+            <img src="images/aba-nigeria-temple-lds-248708-high-res-print.jpg" alt="temple-img" width="400p" height="400p">
             <figcaption>aba-nigeria-temple</figcaption>
         </figure>
 
         <figure>
-            <img src="images/rendering_abidjan_ivory_coast_temple.jpeg" alt="temple-img" width="400px" height="400px">
+            <img src="images/rendering_abidjan_ivory_coast_temple.jpeg" alt="temple-img" width="400p" height="400p">
             <figcaption>rendering_abidjan_temple</figcaption>
         </figure>
 
         <figure>
-            <img src="images/albuquerque_temple_lds-a.jpeg" alt="temple-img" width="400px" height="400px">
+            <img src="images/albuquerque_temple_lds-a.jpeg" alt="temple-img" width="400p" height="400p">
             <figcaption>albuquerque_temple_lds-a</figcaption>
         </figure>
 
         <figure>
-            <img src="images/albuquerque_temple_lds.jpeg" alt="temple-img" width="400px" height="400px">
+            <img src="images/albuquerque_temple_lds.jpeg" alt="temple-img" width="400p" height="400p">
             <figcaption>albuquerque_temple</figcaption>
         </figure>
 
         <figure>
-            <img src="images/bangkok_thailand_temple_exteriors.jpeg" alt="temple-img" width="400px" height="400px">
+            <img src="images/bangkok_thailand_temple_exteriors.jpeg" alt="temple-img" width="400p" height="400p">
             <figcaption>bangkok_thailand_temple</figcaption>
         </figure>
 
         <figure>
-            <img src="images/bern_switzerland_temple_lds.jpeg" alt="temple-img" width="400px" height="400px">
+            <img src="images/bern_switzerland_temple_lds.jpeg" alt="temple-img" width="400p" height="400p">
             <figcaption>bern_switzerland_temple</figcaption>
         </figure>
 
         <figure>
-            <img src="images/billings_temple_lds.jpeg" alt="temple-img" width="400px" height="400px">
+            <img src="images/billings_temple_lds.jpeg" alt="temple-img" width="400p" height="400p">
             <figcaption>billings_temple</figcaption>
         </figure>
 
         <figure>
-            <img src="images/brisbane_australia_temple_lds.jpeg" width="400px" height="400px" alt="temple-img">
+            <img src="images/brisbane_australia_temple_lds.jpeg" width="400p" height="400p" alt="temple-img">
             <figcaption>brisbane_australia_temple</figcaption>
         </figure>
 
         <figure>
-            <img src="images/calgary_alberta_temple_before_open_house.jpeg" width="400px" height="400px" alt="temple-img">
+            <img src="images/calgary_alberta_temple_before_open_house.jpeg" width="400p" height="400p" alt="temple-img">
             <figcaption>calgary_alberta_temple</figcaption>
         </figure> 
 
