--- a/temples.html
+++ b/temples.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1 class="title">Temples Album</h1>
-        <button class="menu-btn" onclick="this.classList.toggle('active')">
+        <button id="button" class="menu-btn" onclick="this.classList.toggle('active')">
             <span></span>
             <span></span>
             <span></span>
