--- a/place.html
+++ b/place.html
@@ -17,7 +17,7 @@
     <main>
         <div class="container">
             <div class="cg-img">
-                <img src="images/gettyimages-1449543954-612x612.jpg" width="100%" height="50%" alt="hero-img">
+                <img src="images/gettyimages-1449543954-612x612.jpg" width="100" height="50" alt="hero-img">
             </div>
             <nav class="home">
                 
@@ -38,7 +38,7 @@
 
             <nav class="weather-container">
                 <h2 class="app-title"> Weather </h2>
-                <div class="w-icon"><img src="images/download.png" width="25px" height="25px" style="margin-top: 6px; border-radius: 50%;" alt="weather-img"></div>
+                <div class="w-icon"><img src="images/download.png" width="25" height="25" style="margin-top: 6px; border-radius: 50%;" alt="weather-img"></div>
                 <div class="notification"></div>
                 <div class="weather-info">
                     <!--<div class="temperature-value"><p> °<span>C</span></p></div>
