--- a/place.html
+++ b/place.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Contry Page Is The Page Created To Describe The Places And The Contry You Have Visited Or You Plan To Visite In Your Life.">
     <meta name="author" content="Aristid Wilbrech ELENGA-ASSEKA">
     <link rel="stylesheet" href="styles/place.css">
-    <script src="place.js" defer></script>
+    <script src="scripts/place.js" defer></script>
 </head>
 <body>
     <header>
