--- a/place.html
+++ b/place.html
@@ -39,10 +39,10 @@
             <nav class="weather-container">
                 <h2 class="app-title"> Weather </h2>
                 <div class="w-icon"><img src="images/download.png" width="25" height="25" style="margin-top: 6px; border-radius: 50%;" alt="weather-img"></div> 
-                 <p><strong>Condition:</strong><span id="condition"></span></p>
-                 <p><strong>Temperature:</strong><span id="temperature"></span>°C</p>
-                 <p><strong>Wind Speed:</strong><span id="windSpeed"></span>km/h</p>
-                 <p><strong>Wind Chill:</strong><span id="windChill"></span></p>             
+                 <p> <strong> Condition: </strong> <span id="condition"> </span> </p>
+                 <p> <strong> Temperature: </strong> <span id="temperature"> </span> °C </p>
+                 <p> <strong> Wind Speed: </strong> <span id="windSpeed"> </span> km/h </p>
+                 <p> <strong> Wind Chill: </strong> <span id="windChill"> </span> °C </p>             
             </nav>
             </nav>
         </div>
