--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <ul class="links">
                 <li class="link"><a href="temples.html">Temples</a></li>
                 <li class="link"><a href="place.html">place</a></li>
-                <li class="link"><a href="byu-idaho">byu-idaho</a></li>
+                <li class="link"><a href="filtered-temples.html">filtered-temple</a></li>
             </ul>
         </section>
     </main>
