--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -22,7 +22,7 @@
         <nav class="menu" id="link">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#" id="nonutha">Old</a></li>
+                <li><a href="project/siteplan.html" id="nonutha">Old</a></li>
                 <li><a href="#">New</a></li>
                 <li><a href="#">Large</a></li>
                 <li><a href="#">Small</a></li>
