--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -19,7 +19,7 @@
         <section class="sitename">
            
             <h2>Site Name: Congolese Youth</h2>
-            <img src="image/c-y-logo.png" alt="congolese youth img" width="250" height="250">
+            <img src="image/c-y-logo.png" alt="congolese youth img" width="250" height="250" loading="lazy">
             <p>Congolese Youth Is Refer To The Youth Of The Congo Region, And This Site Is About Showing What
                 They Can Bring To The Congolese Community And To The World. The Reason I Choose This Subject
                 Is Because As A Congolese Youth I Want To Show The Importance Of This Youth In The Society
@@ -49,7 +49,7 @@
 
         <section class="wireframe">
             <h2>Wireframe:</h2>
-            <img src="image/wireframe.png" alt="wireframe-img">
+            <img src="image/wireframe.png" alt="wireframe-img" loading="lazy">
         </section>
 
     </main>
