--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
         <form action="form-review">
             <section class="product-name">
                 <label class="product" for="text"><h2>Product Name:</h2></label><br>
-                <select name="product-name" id="product-name">
+                <select name="products" id="products">
                     <option value="0">Select The Products</option>
                     <option value="1">Food</option>
                     <option value="2">Motivation Speech</option>
