--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="LinkIn">LinkIn</a></li>
                 <li><a href="I-Learn">I-Learn</a></li>
-                <li><a href="Srupture">Scrupture</a></li>
+                <li><a href="form.html">Scrupture</a></li>
                 <li><a href="Final-Project">Final-Project</a></li>
             </ul>
         </nav>
