--- a/project/website-project.html
+++ b/project/website-project.html
@@ -15,9 +15,9 @@
         <div class="container">
             <img src="image/c-y-logo.png" alt="logo" loading="lazy">
             <div class="link">
-                <li><a href="about-us">About Us</a></li>
-                <li><a href="service">Service</a></li>
-                <li><a href="contente">Contente</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="service.html">Service</a></li>
+                <li><a href="#">Contente</a></li>
             </div>
         </div>
     </header>
