--- a/temples.html
+++ b/temples.html
@@ -23,7 +23,7 @@
                 <li><a href="#old">Old</a></li>
                 <li><a href="#new">New</a></li>
                 <li><a href="#large">Large</a></li>
-                <li><a href="#small">Small</a></li>
+                <li><a href="project/website-project.html">Small</a></li>
             </ul>
            
         </nav>
