--- a/project/about-us.html
+++ b/project/about-us.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Learn More About Our Community </h1>
     </header>
-    <main>
+    <main id="main">
         <div class="container-1">
             <p>
                 
@@ -24,6 +24,7 @@
                 Through events, training programs, partnerships, and advocacy, *Congolese Youth* empowers the new generation to actively engage in national progress, take initiative, and build sustainable solutions for their communities. The youth involved in this platform are determined, creative, and committed to shaping a brighter future for the Republic of Congo.
                 
             </p>
+            <a href="#" id="showhide" class="swiched">Learn More</a>
         </div>
         <div class="container-2">
             <span>🔹 1. General Introduction <br>
