--- a/project/website-project.html
+++ b/project/website-project.html
@@ -16,8 +16,7 @@
             <img src="image/c-y-logo.png" alt="logo" loading="lazy">
             <div class="link">
                 <li><a href="about-us.html">About Us</a></li>
-                <li><a href="service.html
-                    ">Service</a></li>
+                <li><a href="service.html">Service</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </div>
         </div>
