--- a/project/contact.html
+++ b/project/contact.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/contact.css">
     <script src="script/contact.js" defer></script>
-    <title>Contact</title>
+    <title>Contact Us</title>
     <meta name="author" content="Aristid Wilbrech ELENGA-ASSEKA">
     <meta name="description" content="This page is made to allow visiters to contact for service or for more information">
 </head>
 <body>
+    
     <header>
         <h1>Contact Me For More Informations</h1>
     </header>
