--- a/project/contact.html
+++ b/project/contact.html
@@ -18,16 +18,19 @@
     <main>
         <div class="container">
             <div class="info-1">
-                <label for="name">First-Name</label>
-                <input type="text" required>
+                <label for="name">First-Name
+                    <input type="text" required>
+                </label>
             </div>
             <div class="info-2">
-                <label for="name">Last Name</label>
-                <input type="text" required>
+                <label for="name">Last Name
+                    <input type="text" required>
+                </label>
             </div>
             <div class="info-3">
-                <label for="num">Number</label>
-                <input type="text" required>
+                <label for="num">Number
+                    <input type="text" required>
+                </label>
             </div>
             <div class="info-4">
                 <input type="button" id="button" value="Submit" class="button"><br> <br>
