--- a/project/website-project.html
+++ b/project/website-project.html
@@ -26,7 +26,7 @@
 
     <main>
         <h2>Introduction</h2>
-        <img src="image/WhatsApp Image 2024-01-26 at 11.46.51.jpeg" alt="congolese-students">
+        <img src="image/WhatsApp Image 2024-01-26 at 11.46.51.jpeg" alt="congolese-students" loading="lazy">
         <p>🌍✨ Welcome to Congolese Youth ✨🌍
             We are a bold platform dedicated to showcasing the talents, skills, and potential of young people from Brazzaville, Congo.
             
